--- a/React/first-react-app/src/State/ColorBoxes.css
+++ b/React/first-react-app/src/State/ColorBoxes.css
@@ -1,4 +1,7 @@
-.ColorBox {
-    width: 50px;
-    height: 50px;
+.ColorBoxes {
+    width: 250px;
+    height: 250px;
+    border: 1px solid black;
+    display: flex;
+    flex-wrap: wrap;
 }
